--- a/style.scss
+++ b/style.scss
@@ -1,45 +1,166 @@
-@import 'vars';
+@import "vars";
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-@mixin center() {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+body {
+    font-family: sans-serif;
 }
+
+// @mixin center() {
+//   display: flex;
+//   flex-wrap: wrap;
+//   justify-content: center;
+//   align-items: center;
+// }
 
 %font-normal {
-    font-family: sans-serif;
-    font-weight: normal;
+  font-family: sans-serif;
+  font-weight: normal;
 }
 
-// стили для текста 
-
-.color-text {
-    color: $colorText;
+.center {
+    padding-left: calc(50% - 570px);
+    padding-right: calc(50% - 570px);
 }
 
-.nav {
+.top {
+    overflow: hidden;
+}
+
+#check {
+    position: absolute;
+    left: -9999999px;
+    visibility: hidden;
+}
+
+#check:checked ~ .menu {
+    right: -232px;
+}
+
+.header {
+    position: relative;
+    height: 75px;
+    background: #222222;
     display: flex;
-    gap: $gapGrid;
-    &__link {
-        text-decoration: none;
-        @extend %font-normal;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.promo {
+    height: 764px;
+    background: #F1E4E6;
+}
+
+img {
+    height: 60px;
+}
+
+.menu {
+    width: 232px;
+    position: absolute;
+    top: 75px;
+    right: 0;
+    padding: 32px;
+    box-sizing: border-box;
+    transition: right 0.3s;
+    background: #FFFFFF;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);;
+}
+
+.menu__heading {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    margin-bottom: 4px;
+}
+
+.menu__subheading {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+    margin-bottom: 12px;
+    margin-top: 20px;
+}
+
+.menu__ul {
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+    list-style-type: none;
+    padding-left: 20px;
+}
+
+.menu__link {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    &:hover {
+        color: #F16D7F;
+        cursor: pointer;
     }
 }
 
+.color-text {
+  color: $colorText;
+}
+
+.nav {
+  display: flex;
+  gap: $gapGrid;
+  &__link {
+    text-decoration: none;
+    @extend %font-normal;
+  }
+}
+
 .content {
-    width: $widthSite;
+  width: $widthSite;
+  display: flex;
+  gap: $gapGrid;
+//   @include center();
+  &__item {
+    width: $widthSite / 4;
+    border: $border;
+    height: 200px;
+  }
+}
+
+summary {
+  display: block;
+  cursor: pointer;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+.sort {
     display: flex;
-    gap: $gapGrid;
-    @include center();
-    &__item {
-        width: $widthSite / 4;
-        border: $border;
-        height: 200px;
+    gap: 28px;
+}
+
+.details {
+    position: relative;
+    &__box {
+        position: absolute;
+        left: -9px;
+        top: 22px;
+        background: #FFFFFF;
+        box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+        padding: 7px 9px 11px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
     }
 }
